--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,10 @@
 main:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
+  - title: "About"
+    url: /about/
+  - title: "Blogs"
+    url: /blogs/
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
