--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ author:
       # url: "https://instagram.com/"
     - label: "Linkedin"
       icon: "fab fa-linkedin"
-      url: "https://www.linkedin.com/in/asser-zayed/
+      url: "https://www.linkedin.com/in/asser-zayed/"
 
 # Site Footer
 footer:
